feat: actual html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Googiewoggie</title>
+    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
+    <title>Googiewoggie</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fascinate&family=Nokora:wght@100..900&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Rubik+Wet+Paint&display=swap"
+        rel="stylesheet">
+    <style>
+        body,
+        html {
+            height: 100%;
+            background: RGB(171 172 173);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background: rgb(249 195 255);
+        }
+
+        h1 {
+            font-size: 78px;
+            text-align: center;
+            font-family: "Fascinate", system-ui;
+            font-weight: 400;
+            font-style: normal;
+            color: rgb(77 0 255);
+            padding-top: 265px;
+            padding-bottom: 20px;
+            margin: 0px;
+        }
+
+        p {
+            font-size: 22px;
+            text-align: center;
+            font-family: "Outfit", sans-serif;
+            font-optical-sizing: auto;
+            letter-spacing: 4px;
+            font-weight: bold;
+            font-style: normal;
+            color: #49003c;
+        }
+    </style>
 </head>
+
 <body>
-  <h1>Welcome to googiewoggie.com!</h1>
+    <div class="container">
+        <h1>Googiewoggie</h1>
+    </div>
+    <div class="container">
+        <p>Sometimes it is impossible to stop the googie
+        <p>
+            make room for a woggie..
+    </div>
+    </p>
 </body>
 </html>
